Fixed bug #43183 ("use" of the same class in difference scripts results in a fatal error)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@246044 c90b9560-bf6c-de11-be94-00142212c4b1